--- a/pybo/templates/auth/login.html
+++ b/pybo/templates/auth/login.html
@@ -1,20 +1,30 @@
-{% extends "base.html" %}
+{% extends "nonav_base.html" %}
 {% block content %}
-<div class="container my-3">
-    <form method="post" class="post-form">
-        {{ form.csrf_token }}
-        {% include "form_errors.html" %}
-        <div class="form-group">
-            <label for="username">사용자 이름</label>
-            <input type="text" class="form-control" name="username" id="username"
-                   value="{{ form.username.data or '' }}">
-        </div>
-        <div class="form-group">
-            <label for="password">비밀번호</label>
-            <input type="password" class="form-control" name="password" id="password"
-                   value="{{ form.password.data or '' }}">
-        </div>
-        <button type="submit" class="btn btn-primary">로그인</button>
-    </form>
-</div>
+<section class="sign-in">
+  <div class="container">
+    <div class="row d-flex justify-content-end mt-4 sign">
+      <p class="pr-2 mb-0 align-self-center">아직 계정이 없으신가요?</p>
+      <a href="{{ url_for('auth.signup') }}" class="text-body">회원가입</a>
+    </div>
+    <div class="form col-6 mx-auto">
+        <a href="{{ url_for('main.index')}}"><img src="{{ url_for('static', filename='img/logo.png') }}" class="img-fluid" style="width: 200px"></a>
+        <br>
+        <form method="post" class="post-form">
+            {{ form.csrf_token }}
+            {% include "form_errors.html" %}
+              <div class="bg-white mx-3 px-4 py-4 border-top border-warning">
+                <div class="form-group">
+                  <label for="username" style="font-size : 13px">아이디</label>
+                  <input type="text" class="form-control" id="username" name="username" placeholder="아이디" value="{{ form.username.data or '' }}" style="font-size : 13px" >
+                </div>
+                <div class="form-group">
+                  <label for="password" style="font-size : 13px">비밀번호</label>
+                  <input type="password" class="form-control" id="password" name="password" placeholder="비밀번호" value="{{ form.password.data or '' }}" style="font-size : 13px">
+                </div>
+                <button type="submit" class="border-top-3 mb-3 btn-warning btn-lg btn-block" style="background-color:#ffa300; font-size : 15px " >로그인</button>
+              </div>
+        </form>
+    </div>
+  </div>
+</section>
 {% endblock %}
