--- a/pybo/templates/auth/signup.html
+++ b/pybo/templates/auth/signup.html
@@ -1,30 +1,45 @@
-{% extends "base.html" %}
+{% extends "nonav_base.html" %}
 {% block content %}
-<div class="container my-3">
-    <form method="post" class="post-form">
-        {{ form.csrf_token }}
-        {% include "form_errors.html" %}
-        <div class="form-group">
-            <label for="username">사용자 이름</label>
-            <input type="text" class="form-control" name="username" id="username"
-                   value="{{ form.username.data|default('', true) }}">
-        </div>
-        <div class="form-group">
-            <label for="password1">비밀번호</label>
-            <input type="password" class="form-control" name="password1" id="password1"
-                   value="{{ form.password1.data|default('', true) }}">
-        </div>
-        <div class="form-group">
-            <label for="password2">비밀번호 확인</label>
-            <input type="password" class="form-control" name="password2" id="password2"
-                   value="{{ form.password2.data|default('', true) }}">
-        </div>
-        <div class="form-group">
-            <label for="email">이메일</label>
-            <input type="text" class="form-control" name="email" id="email"
-                   value="{{ form.email.data|default('', true) }}">
-        </div>
-        <button type="submit" class="btn btn-primary">생성하기</button>
-    </form>
-</div>
+<section class="sign-up">
+    <div class="container">
+    <div class="row d-flex justify-content-end mt-4 sign">
+      <p class="pr-2 mb-0 align-self-center">이미 계정이 있으신가요?</p>
+      <a href="sign-in.html" class="text-body">로그인</a>
+    </div>
+      <div class="form col-8 mx-auto">
+      <a href="{{ url_for('main.index')}}"><img src="{{ url_for('static', filename='img/logo.png') }}" class="img-fluid" style="width: 200px"></a>
+        <br>
+        <form method="post" class="post-form">
+            {{ form.csrf_token }}
+            {% include "form_errors.html" %}
+          <div class="bg-white mx-3 px-4 py-4 border-top border-warning">
+           <div class="form-group">
+              <label for="username" style="font-size : 13px">사용자 이름/아이디</label>
+              <input type="text" class="form-control" placeholder="ID" name="username" id="username"
+                       value="{{ form.username.data|default('', true) }}" style="font-size : 13px">
+            </div>
+            <div class="form-group">
+              <label for="password1" style="font-size : 13px">비밀번호</label>
+              <input type="password" class="form-control" name="password1" id="password1"
+                       value="{{ form.password1.data|default('', true) }}" placeholder="비밀번호" style="font-size : 13px">
+            </div>
+            <div class="form-group">
+              <label for="password2" style="font-size : 13px">비밀번호 확인</label>
+              <input type="password" class="form-control" name="password2" id="password2"
+                       value="{{ form.password2.data|default('', true) }}" placeholder="비밀번호 재입력" style="font-size : 13px">
+            </div>
+            <div class="form-group">
+              <label for="email" style="font-size : 13px">이메일</label>
+              <input type="text" class="form-control" name="email" id="email"
+                       value="{{ form.email.data|default('', true) }}" placeholder="이메일" style="font-size : 13px">
+            </div>
+            <br>
+             <button type="submit" class="mb-3 btn-lg btn-block" style="font-size : 15px">회원가입</button>
+            </div>
+          </form>
+    </div>
+    </div>
+</section>
+
+
 {% endblock %}
