--- a/pybo/templates/navbar.html
+++ b/pybo/templates/navbar.html
@@ -43,7 +43,7 @@
                       <div class="col-6">
                          <ul class="px-0">
                            <li><a href="#">Best</a></li>
-                           <li><a href="#">셔틀정보</a></li>
+                           <li><a href="{{ url_for('information.bus') }}">셔틀정보</a></li>
                          </ul>
                       </div>
                       <div class="col-6">
