--- a/pybo/templates/question/rating_form.html
+++ b/pybo/templates/question/rating_form.html
@@ -25,7 +25,7 @@
             <label for="semester">수강학기</label>
             <select class="form-control selectpicker" name="semester" id="semester"  data-style="btn-white" value="{{ form.semester.data or '' }}">
                 {% for semester in semester_list %}
-                    {% if semester.id % 10 ==2 %}
+                    {% if semester.id % 10 == 4 %}
                         <optgroup label="{{semester.id // 100}}년">
                         {% endif %}
                         <option value={{semester.id}}>{{semester.semester_name}}</option>
@@ -37,7 +37,7 @@
         </div>
         <div class="form-group">
             <label for="department">설강학과</label>
-            <select class="form-control selectpicker"  name="department" id="department" data-style="btn-white" value="{{ form.department.data or '' }}  ">
+            <select class="form-control selectpicker"  name="department" id="department" data-live-search="true" data-style="btn-white" value="{{ form.department.data or '' }}  ">
                 {% for department in department_list %}
                     {% if department.id % 10 == 1 %}
                         {% if department.id // 10 == 0 %}
@@ -56,6 +56,8 @@
                             <optgroup label="디자인대학">
                         {% elif department.id // 10 == 7 %}
                             <optgroup label="예체능대학">
+                        {% elif department.id // 10 == 8 %}
+                            <optgroup label="약학대학">
                         {% endif %}
                     {% endif %}
                         <option value={{department.id}}>{{department.department_name}}</option>
