--- a/pybo/templates/auth/login.html
+++ b/pybo/templates/auth/login.html
@@ -7,7 +7,7 @@
       <a href="{{ url_for('auth.signup') }}" class="text-body">회원가입</a>
     </div>
     <div class="form col-6 mx-auto">
-        <a href="{{ url_for('main.index')}}"><img src="{{ url_for('static', filename='img/logo.png') }}" class="img-fluid" style="width: 200px"></a>
+        <a href="{{ url_for('main.hello')}}"><img src="{{ url_for('static', filename='img/logo.png') }}" class="img-fluid" style="width: 200px"></a>
         <br>
         <form method="post" class="post-form">
             {{ form.csrf_token }}
