--- a/pybo/templates/question/question_form.html
+++ b/pybo/templates/question/question_form.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+
 {% block content %}
 <div class="container">
     <h5 class="my-3 border-bottom pb-2">게시글 등록</h5>
@@ -81,7 +82,7 @@
         <div class="form-group">
             <label for="content">내용</label>
             <textarea class="form-control" name="content"
-                      id="content" rows="10">{{ form.content.data or '' }}</textarea>
+                      id="content" rows="10">{{ form.content.data or '' }} </textarea>
         </div>
         <button type="submit" class="btn btn-warning" style="background-color: #ffa300; color:white" >작성</button>
     </form>
@@ -89,6 +90,16 @@
 
 
 
+{% endblock %}
+
+{% block script %}
+
+<script src="{{ url_for('static', filename='simplemde.min.js') }}"></script>
+<link rel="stylesheet" href="{{ url_for('static', filename='simplemde.min.css') }}">
+<script>
+
+    var simplemde = new SimpleMDE({element: document.getElementById("content"), spellChecker: false});
+</script>
 {% endblock %}
 
 
