--- a/pybo/templates/question/rating_form.html
+++ b/pybo/templates/question/rating_form.html
@@ -99,4 +99,14 @@
 
 {% endblock %}
 
+{% block script %}
+
+<script src="{{ url_for('static', filename='simplemde.min.js') }}"></script>
+<link rel="stylesheet" href="{{ url_for('static', filename='simplemde.min.css') }}">
+<script>
+
+    var simplemde = new SimpleMDE({element: document.getElementById("content"), spellChecker: false});
+</script>
+{% endblock %}
+
 
