--- a/pybo/templates/question/question_detail.html
+++ b/pybo/templates/question/question_detail.html
@@ -114,7 +114,7 @@
             <div class="card">
             {% endif %}
                 <div class="card-body" >
-                    <div class="card-text" style="white-space: pre-line;">{{ answer.content }}</div>
+                    <div class="card-text" style="white-space: pre-line;">{{ answer.content|markdown }}</div>
                     <div class="d-flex justify-content-end">
                         {% if answer.modify_date %}
                         <div class="badge badge-light p-2 text-left mx-3">
