Add menu into navbar

--- a/pybo/templates/navbar.html
+++ b/pybo/templates/navbar.html
@@ -52,7 +52,7 @@
                       <div class="col-6">
                          <ul class="px-0">
                            <li><a href="{{ url_for('question.classify', category='rating') }}">강의평가</a></li>
-                           <li><a href="#">학식정보</a></li>
+                           <li><a href="{{ url_for('information.menu') }}">학식정보</a></li>
                          </ul>
                       </div>
                     </div>
