--- a/pybo/templates/information/menu.html
+++ b/pybo/templates/information/menu.html
@@ -14,7 +14,7 @@
                     <div class="widget-49">
                         <div class="widget-49-title-wrapper">
                             <div class="widget-49-meeting-info">
-                                <span class="widget-49-pro-title">{{restaurant.restaurant_name}}</span>
+                                <span class="widget-49-pro-title"><b>{{restaurant.restaurant_name}}</b></span>
                                 <span class="widget-49-meeting-time">{{restaurant.location}}</span>
                             </div>
                         </div>
