Mobile Web and Category Study Group

--- a/pybo/templates/question/question_form.html
+++ b/pybo/templates/question/question_form.html
@@ -26,6 +26,7 @@
                     <option value="promotion">홍보게시판</option>
                     <option value="metaverse">메타버스</option>
                     <option value="issue">시사 이슈</option>
+                    <option value="studygroup">스터디 모집</option>
                 </select>
             </div>
         {% else %}
