login design with mobile

--- a/pybo/templates/auth/login.html
+++ b/pybo/templates/auth/login.html
@@ -6,7 +6,7 @@
       <p class="pr-2 mb-0 align-self-center">아직 계정이 없으신가요?</p>
       <a href="{{ url_for('auth.signup') }}" class="text-body">회원가입</a>
     </div>
-    <div class="form col-6 mx-auto">
+    <div class="form col-lg-6 col-md-8 col-sm-8 mx-auto">
         <a href="{{ url_for('main.hello')}}"><img src="{{ url_for('static', filename='img/logo.png') }}" class="img-fluid" style="width: 200px"></a>
         <br>
         <form method="post" class="post-form">
