--- a/pybo/templates/question/question_detail.html
+++ b/pybo/templates/question/question_detail.html
@@ -33,12 +33,12 @@
     </div>
     {% endif %}
     <div class="row my-3">
-        <div class="col-1"> <!-- 추천영역 -->
+        <div class="col-lg-1"> <!-- 추천영역 -->
             <div class="bg-light text-center p-3 border font-weight-bolder mb-1">{{ question.voter|length }}</div>
             <a href="#" data-uri="{{ url_for('vote.question', question_id=question.id) }}"
                class="recommend btn btn-sm btn-secondary btn-block my-1">추천</a>
         </div>
-        <div class="col-11"> <!-- 질문영역 -->
+        <div class="col-lg-11"> <!-- 질문영역 -->
             <div class="card">
                 <div class="card-body">
                     <div class="card-text">{{ question.content|markdown }}</div>
