--- a/pybo/templates/question/question_detail.html
+++ b/pybo/templates/question/question_detail.html
@@ -33,12 +33,12 @@
     </div>
     {% endif %}
     <div class="row my-3">
-        <div class="col-lg-1"> <!-- 추천영역 -->
+        <div class="col-1"> <!-- 추천영역 -->
             <div class="bg-light text-center p-3 border font-weight-bolder mb-1">{{ question.voter|length }}</div>
             <a href="#" data-uri="{{ url_for('vote.question', question_id=question.id) }}"
                class="recommend btn btn-sm btn-secondary btn-block my-1">추천</a>
         </div>
-        <div class="col-lg-11"> <!-- 질문영역 -->
+        <div class="col-11"> <!-- 질문영역 -->
             <div class="card">
                 <div class="card-body">
                     <div class="card-text">{{ question.content|markdown }}</div>
@@ -118,7 +118,7 @@
                     <div class="d-flex justify-content-end">
                         {% if answer.modify_date %}
                         <div class="badge badge-light p-2 text-left mx-3">
-                            <div class="mb-2">modified at</div>
+                            <div class="mb-2">수정됨</div>
                             <div>{{ answer.modify_date|datetime }}</div>
                         </div>
                         {% endif %}
@@ -207,7 +207,14 @@ $(document).ready(function(){
 <script src="{{ url_for('static', filename='simplemde.min.js') }}"></script>
 <link rel="stylesheet" href="{{ url_for('static', filename='simplemde.min.css') }}">
 <script>
+    var filter = "win16|win32|win64|macintel|mac|"; // PC일 경우 가능한 값
+    if( navigator.platform) {
+         if( filter.indexOf(navigator.platform.toLowerCase())<0 ) {
 
-    var simplemde = new SimpleMDE({element: document.getElementById("content"), spellChecker: false});
+         }
+         else {
+               var simplemde = new SimpleMDE({element: document.getElementById("content"), spellChecker: false});
+         }
+    }
 </script>
 {% endblock %}
