--- a/pybo/templates/question/rating_detail.html
+++ b/pybo/templates/question/rating_detail.html
@@ -104,7 +104,7 @@
                     <div class="d-flex justify-content-end">
                         {% if answer.modify_date %}
                         <div class="badge badge-light p-2 text-left mx-3">
-                            <div class="mb-2">modified at</div>
+                            <div class="mb-2">수정됨</div>
                             <div>{{ answer.modify_date|datetime }}</div>
                         </div>
                         {% endif %}
