--- a/pybo/templates/answer/answer_form.html
+++ b/pybo/templates/answer/answer_form.html
@@ -5,11 +5,30 @@
         {{ form.csrf_token }}
         {% include "form_errors.html" %}
         <div class="form-group">
-            <label for="content">답변내용</label>
+            <label for="content">댓글 내용</label>
             <textarea class="form-control" name="content" id="content"
                       rows="10">{{ form.content.data or '' }}</textarea>
         </div>
-        <button type="submit" class="btn btn-primary">저장하기</button>
+        <button type="submit" class="btn btn-warning">수정하기</button>
     </form>
 </div>
 {% endblock %}
+
+{% block script %}
+
+<script src="{{ url_for('static', filename='simplemde.min.js') }}"></script>
+<link rel="stylesheet" href="{{ url_for('static', filename='simplemde.min.css') }}">
+<script>
+    var filter = "win16|win32|win64|macintel|mac|"; // PC일 경우 가능한 값
+    if( navigator.platform) {
+         if( filter.indexOf(navigator.platform.toLowerCase())<0 ) {
+
+         }
+         else {
+               var simplemde = new SimpleMDE({element: document.getElementById("content"), spellChecker: false});
+         }
+    }
+</script>
+{% endblock %}
+
+
