--- a/pybo/templates/question/question_detail.html
+++ b/pybo/templates/question/question_detail.html
@@ -33,12 +33,7 @@
     </div>
     {% endif %}
     <div class="row my-3">
-        <div class="col-1"> <!-- 추천영역 -->
-            <div class="bg-light text-center p-3 border font-weight-bolder mb-1">{{ question.voter|length }}</div>
-            <a href="#" data-uri="{{ url_for('vote.question', question_id=question.id) }}"
-               class="recommend btn btn-sm btn-secondary btn-block my-1">추천</a>
-        </div>
-        <div class="col-11"> <!-- 질문영역 -->
+        <div class="col-12"> <!-- 질문영역 -->
             <div class="card">
                 <div class="card-body">
                     <div class="card-text">{{ question.content|markdown }}</div>
@@ -54,14 +49,26 @@
                             <div>{{ question.create_date|datetime }}</div>
                         </div>
                     </div>
-                    {% if g.user == question.user %}
-                    <div class="my-3">
-                        <a href="{{ url_for('question.modify', question_id=question.id) }}"
-                           class="btn btn-sm btn-outline-secondary">수정</a>
-                        <a href="#" class="delete btn btn-sm btn-outline-secondary"
-                           data-uri="{{ url_for('question.delete', question_id=question.id) }}">삭제</a>
+                    <div class="d-flex justify-content-between my-2">
+                        <div class="my-1">
+                        <ul class="list-group list-group-horizontal" >
+                          <li><i class="fas fa-solid fa-comment" style="color: #ffde55;"> {{ question.answer_set|length }}</i></li>
+                          <li><i class="fas fa-solid fa-thumbs-up px-4 "  style="color: #ffa300"> {{ question.voter|length }}</i></li>
+                        </ul>
                     </div>
-                    {% endif %}
+                        <div class="my-1">
+                        {% if g.user != question.user %}
+                            <a href="{{ url_for('vote.question', question_id=question.id) }}"
+                               class="btn btn-warning" style="background-color: #ffc009; color:white">추천</a>
+                        {% else %}
+                            <a href="{{ url_for('question.modify', question_id=question.id) }}"
+                               class="btn btn-sm btn-outline-secondary">수정</a>
+                            <a href="#" class="delete btn btn-sm btn-outline-secondary"
+                               data-uri="{{ url_for('question.delete', question_id=question.id) }}">삭제</a>
+                        {% endif %}
+                        </div>
+                    </div>
+
                     <!-- 질문 댓글 Start -->
                     {% if question.comment_set|length > 0 %}
                     <div class="mt-3">
